[gd_scene load_steps=37 format=2]

[ext_resource path="res://Body.tres" type="PhysicsMaterial" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound/crash1.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound/crash2.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/crash3.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/crash4.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sound/crash5.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sound/crash6.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sound/crash7.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sound/crash8.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sound/crash9.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sound/crash10.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sound/bjorn1.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sound/bjorn2.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/Sound/bjorn3.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sound/bjorn4.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Sound/bjorn5.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/Sound/bjorn6.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/Sound/bjorn7.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/Sound/bjorn8.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/Sound/bjorn9.wav" type="AudioStream" id=21]
[ext_resource path="res://Assets/torso.png" type="Texture" id=22]
[ext_resource path="res://Shape Memory.gd" type="Script" id=23]
[ext_resource path="res://Assets/Leg_L.png" type="Texture" id=24]
[ext_resource path="res://Assets/Leg_R.png" type="Texture" id=25]
[ext_resource path="res://Assets/Arm_L.png" type="Texture" id=26]
[ext_resource path="res://Assets/Arm_R.png" type="Texture" id=27]
[ext_resource path="res://Assets/helmet.png" type="Texture" id=28]
[ext_resource path="res://Assets/sword.png" type="Texture" id=29]

[sub_resource type="CapsuleShape2D" id=1]
radius = 50.0
height = 100.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0005
height = 161.999

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.0005
height = 161.999

[sub_resource type="CapsuleShape2D" id=4]
radius = 20.0005
height = 83.5602

[sub_resource type="CapsuleShape2D" id=5]
radius = 20.0005
height = 86.8184

[sub_resource type="CircleShape2D" id=6]
radius = 36.3995

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 84.9432 )

[node name="Player" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -50.0
margin_top = -100.0
margin_right = 50.0
margin_bottom = 100.0
color = Color( 1, 0.462745, 0.462745, 1 )

[node name="Torso" type="RigidBody2D" parent="."]
collision_mask = 0
mode = 1
physics_material_override = ExtResource( 1 )
gravity_scale = 32.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
acceleration = 2500.0
crashes = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ]
shouts = [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ]

[node name="Torso" type="Sprite" parent="Torso"]
z_index = 3
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Torso"]
volume_db = -10.524

[node name="Leg_L" type="RigidBody2D" parent="."]
collision_mask = 0
mode = 1
physics_material_override = ExtResource( 1 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 23 )

[node name="Leg_L" type="Sprite" parent="Leg_L"]
position = Vector2( -15.9996, 74.0003 )
z_index = 2
texture = ExtResource( 24 )
offset = Vector2( -21.0004, 95.9998 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leg_L"]
position = Vector2( -32, 182 )
shape = SubResource( 2 )

[node name="Joint" type="GrooveJoint2D" parent="Leg_L"]
node_a = NodePath("..")
node_b = NodePath("../../Torso")
bias = 0.9

[node name="Leg_R" type="RigidBody2D" parent="."]
collision_mask = 0
mode = 1
physics_material_override = ExtResource( 1 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 23 )

[node name="Joint" type="GrooveJoint2D" parent="Leg_R"]
node_a = NodePath("../../Torso")
node_b = NodePath("..")
bias = 0.9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leg_R"]
position = Vector2( 29.1287, 187.417 )
shape = SubResource( 3 )

[node name="Leg_R" type="Sprite" parent="Leg_R"]
position = Vector2( 18.0005, 82.0003 )
z_index = 1
texture = ExtResource( 25 )
offset = Vector2( 19.9996, 98.9999 )

[node name="Arm_L" type="RigidBody2D" parent="."]
collision_mask = 0
mode = 1
physics_material_override = ExtResource( 1 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 23 )

[node name="Joint" type="GrooveJoint2D" parent="Arm_L"]
node_a = NodePath("../../Torso")
node_b = NodePath("..")
bias = 0.9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm_L"]
position = Vector2( 49.829, 17.717 )
shape = SubResource( 4 )

[node name="Arm_L" type="Sprite" parent="Arm_L"]
position = Vector2( 38.0005, -48.9998 )
z_index = 3
texture = ExtResource( 26 )
offset = Vector2( 20.9996, 74.9999 )

[node name="Arm_R" type="RigidBody2D" parent="."]
collision_mask = 0
mode = 1
physics_material_override = ExtResource( 1 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 23 )

[node name="Joint" type="GrooveJoint2D" parent="Arm_R"]
node_a = NodePath("../../Torso")
node_b = NodePath("..")
bias = 0.9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm_R"]
position = Vector2( -56.5778, 18.7326 )
shape = SubResource( 5 )

[node name="Arm_R" type="Sprite" parent="Arm_R"]
position = Vector2( -30.9996, -34.9998 )
z_index = 3
texture = ExtResource( 27 )
offset = Vector2( -14.0005, 63.9998 )

[node name="Helmet" type="RigidBody2D" parent="."]
collision_mask = 0
mode = 1
physics_material_override = ExtResource( 1 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 23 )

[node name="Joint" type="GrooveJoint2D" parent="Helmet"]
node_a = NodePath("../../Torso")
node_b = NodePath("..")
bias = 0.9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Helmet"]
position = Vector2( 0.682037, -88.0492 )
shape = SubResource( 6 )

[node name="Helmet" type="Sprite" parent="Helmet"]
position = Vector2( -1.99957, -55.9998 )
z_index = 3
texture = ExtResource( 28 )
offset = Vector2( 3.99957, -36.0002 )

[node name="Sword" type="RigidBody2D" parent="."]
position = Vector2( -2.12, -6.32 )
rotation = -0.523599
collision_mask = 0
mode = 1
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true

[node name="Sword" type="Sprite" parent="Sword"]
position = Vector2( -7.73782, 27.0824 )
z_index = 3
texture = ExtResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2( -1.54761, 27.8561 )
rotation = 0.0872665
shape = SubResource( 7 )

[node name="Joint" type="GrooveJoint2D" parent="Sword"]
node_a = NodePath("..")
node_b = NodePath("../../Arm_L")
bias = 0.9

[node name="Shouting" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[node name="Timer" type="Timer" parent="Shouting"]
wait_time = 3.0

[connection signal="body_entered" from="Torso" to="Torso" method="_on_Limb_body_entered"]
[connection signal="body_entered" from="Leg_L" to="Torso" method="_on_Limb_body_entered"]
[connection signal="body_entered" from="Leg_R" to="Torso" method="_on_Limb_body_entered"]
[connection signal="body_entered" from="Arm_L" to="Torso" method="_on_Limb_body_entered"]
[connection signal="body_entered" from="Arm_R" to="Torso" method="_on_Limb_body_entered"]
[connection signal="body_entered" from="Helmet" to="Torso" method="_on_Limb_body_entered"]
[connection signal="body_entered" from="Sword" to="Torso" method="_on_Limb_body_entered"]
[connection signal="timeout" from="Shouting/Timer" to="Torso" method="random_shout"]
